using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationString 
{
    public const string IS_MOVING = "IsMoving";
    public const string IS_RUNNING = "IsRunning";
    public const string IS_GROUND = "IsGround";
    public const string Y_VELOCITY = "yVelocity";
    public const string JUMP = "Jump";
    public const string IS_ON_WALL = "IsOnWall";
    public const string IS_CEILING = "IsCeiling";
}
